--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                 <h2>BlogSite</h2>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#postsContainer">Posts</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#postsContainer">All Posts</a></li>
             </ul>
             <button class="login-btn" onclick="window.location.href='signup.html'">Login</button>
         </nav>
